--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Redes sociais</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./graficos/informacoesGlobais.js"></script>
+    <script type="module" src="./graficos/graicosGlobais.js"></script>
+    <script type="module" src="./graficos/quantidadeUsuarios.js"></script>
 </head>
 <body>
     <header>
